# AI-trading-dashboard

./: .env.example  .gitignore  CLAUDE.md  PROJECT_BRIEF.md  README.md
.claude/: settings.local.json
.github/workflows/: bot.yml  discovery.yml  scanner.yml  summarize.yml
backend/: bot.py  pyproject.toml  requirements.txt  supabase_schema.sql
backend/app/: __init__.py  ai.py  alerts.py  analysis_cache.py  cli.py  config.py  main.py  models.py  scanner.py  storage.py
backend/app/data/: coingecko.py  lunarcrush.py  sentiment_cache.py
backend/app/discovery/: cli.py  scorer.py  service.py  store.py
backend/app/trading/: indicators.py  market_data.py  market_registry.py  rules.py
backend/tests/: conftest.py  test_analysis_cache.py  test_analyze_endpoint.py  test_market_registry.py  test_scorer.py
docs/superpowers/plans/: 2026-05-26-pipeline-redesign.md
docs/superpowers/specs/: 2026-05-26-pipeline-redesign-design.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/alerts/: page.tsx
frontend/app/components/: AlertPanel.tsx  AutoSetup.tsx  DailyReport.tsx  DiscoverButton.tsx  DnaSelector.tsx  Nav.tsx  RunAllButton.tsx  ScanButton.tsx  SignalsTable.tsx  StrategyView.tsx  SummarizeButton.tsx  TopMarketsPanel.tsx  TradingViewWidget.tsx  UserSetup.tsx  (+2 more)
frontend/lib/: api.ts  pollWorkflow.ts  supabase.ts  tradingview.ts  types.ts
skills/: Investor-DNA-SKILL.md  Investor-Decision-Stack-SKILL.md  Legends-SKILL.md  architect.md  rockstar.md  sniper.md  watcher.md
(+13 files in other folders)
