[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-trading-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "pyTelegramBotAPI>=4.14.0",
    "yfinance>=0.2.50",
    "ccxt>=4.4.40",
    "fastapi>=0.115.6",
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.34.0",
    "groq>=0.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
